--- a/package.json
+++ b/package.json
@@ -1,20 +1,14 @@
 {
   "name": "pg-then",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "pg-then: use pg by promise",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
     "test": "mocha -R spec -t 5000 test/*.js",
     "test-cov": "istanbul cover node_modules/.bin/_mocha -- -R dot -t 5000 test/*.js",
     "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly -- -R dot -t 5000 test/*.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/coderhaoxin/pg-then.git"
-  },
+  "repository": "coderhaoxin/pg-then",
   "files": [
     "index.js"
   ],
@@ -27,10 +21,6 @@
   ],
   "author": "haoxin",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/coderhaoxin/pg-then/issues"
-  },
-  "homepage": "https://github.com/coderhaoxin/pg-then",
   "devDependencies": {
     "istanbul": "0",
     "mocha": "2",
