Set up package for ES2015 -> ES5 transpilation

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "pg-then",
   "version": "1.2.0",
   "description": "pg-then: use pg by promise",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "jsnext:main": "index.js",
   "scripts": {
+    "prepublish": "npm run build",
+    "build": "babel index.js -d dist",
     "test": "mocha -R spec -t 5000 test/*.js",
     "test-cov": "istanbul cover node_modules/.bin/_mocha -- -R dot -t 5000 test/*.js",
     "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly -- -R dot -t 5000 test/*.js"
@@ -22,11 +25,13 @@
   "author": "haoxin",
   "license": "MIT",
   "devDependencies": {
+    "babel": "^5.8.34",
     "istanbul": "0",
     "mocha": "2",
     "pg": "4"
   },
   "dependencies": {
+    "babel-runtime": "^5.8.34",
     "pg-query-stream": "1"
   }
 }
