--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pg-then",
+  "name": "@motiz88/pg-then",
   "version": "1.2.0",
   "description": "pg-then: use pg by promise",
   "main": "dist/index.js",
@@ -11,7 +11,7 @@
     "test-cov": "istanbul cover node_modules/.bin/_mocha -- -R dot -t 5000 test/*.js",
     "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly -- -R dot -t 5000 test/*.js"
   },
-  "repository": "coderhaoxin/pg-then",
+  "repository": "motiz88/pg-then",
   "files": [
     "index.js"
   ],
