--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "test-cov": "istanbul cover node_modules/.bin/_mocha -- -R dot -t 5000 test/*.js",
     "test-travis": "istanbul cover node_modules/.bin/_mocha --report lcovonly -- -R dot -t 5000 test/*.js"
   },
+  "files": [
+    "index.js",
+    "dist/index.js"
+  ],
   "repository": "coderhaoxin/pg-then",
   "keywords": [
     "postgre",
